[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.11",
    "flask>=3.1.1",
    "nest-asyncio>=1.6.0",
    "python-telegram-bot[job-queue]>=22.1",
    "requests>=2.32.3",
    "telegram>=0.0.1",
]
